--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -11,10 +11,24 @@
     </style>
     
     <div id="main">
-      <app-router id="router" class="flex" mode="hash", trailingSlash="ignore">
-        <app-route path="/dashboard" element="aq-dashboard-main" bindrouter=""></app-route>
+      <app-router id="router" class="flex" mode="hash" trailingSlash="ignore">
+        <app-route path="/" redirect="/dashboard/home"></app-route>
+        <app-route path="/dashboard" redirect="/dashboard/home"></app-route>
 
-        <app-route path="/dashboard/:view" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel"></app-route>
+        <app-route path="/dashboard/home" element="aq-dashboard-main" bindrouter=""></app-route>
+        
+        <app-route path="/dashboard/editor" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel"></app-route>          
+        <app-route path="/dashboard/editor/(*)" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel">
+        </app-route>
+
+        <!--app-route path="/dashboard/:view" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel">
+        </app-route-->
+
+        <app-route path="/dashboard/action?createstrategy" redirect="/dashboard/editor?create"></app-route>
+        <app-route path="/dashboard/action?createpost" redirect="/dashboard/community/create"></app-route>
+        <app-route path="/dashboard/action?comparebacktests" redirect="/dashboard/analyze/compare"></app-route>
+        <app-route path="/dashboard/action?lockscreen" redirect="/dashboard/lock"></app-route>      
+  
       </app-router>
     </div>
 
