--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="import" href="/src/aq-dashboard/aq-dashboard.html">
   </head>
   <body>
+    <span id="browser-sync-binding"></span>
     <aq-dashboard></aq-dashboard>
   </body>
 </html>
