Added new editor elements

--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -15,20 +15,10 @@
         <app-route path="/" redirect="/dashboard/home"></app-route>
         <app-route path="/dashboard" redirect="/dashboard/home"></app-route>
 
-        <app-route path="/dashboard/home" element="aq-dashboard-main" bindrouter=""></app-route>
-        
-        <app-route path="/dashboard/editor" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel"></app-route>          
-        <app-route path="/dashboard/editor/(*)" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel">
-        </app-route>
+        <app-route path="/dashboard/*" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel"></app-route>
 
-        <!--app-route path="/dashboard/:view" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel">
-        </app-route-->
+        <app-route path="/dashboard/*/*" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel"></app-route>
 
-        <app-route path="/dashboard/action?createstrategy" redirect="/dashboard/editor?create"></app-route>
-        <app-route path="/dashboard/action?createpost" redirect="/dashboard/community/create"></app-route>
-        <app-route path="/dashboard/action?comparebacktests" redirect="/dashboard/analyze/compare"></app-route>
-        <app-route path="/dashboard/action?lockscreen" redirect="/dashboard/lock"></app-route>      
-  
       </app-router>
     </div>
 
