--- a/src/dialog/aq-editor-strategy-compare-dialog.html
+++ b/src/dialog/aq-editor-strategy-compare-dialog.html
@@ -64,6 +64,10 @@
 	
 	<template>
 	    <paper-dialog id='compareStrategyModalDialog' with-backdrop>
+	    	<div style="margin-left:-30px;margin-top:-5px">
+ 				<paper-icon-button dialog-dismiss icon="icons:cancel"></paper-icon-button>
+ 			</div>
+ 			
  			<div class="layout horizontal" id='outer-container'>				
 
  			 <div class="container layout vertical" id='first-container'>
