Added routes for community. Added routing of the pages in the community section after AJAX calls. Improved rendering of the pages in case of slow AJAX calls. Added improvements to the non-programming interface of the editor. Deleted unnecessary code and directories.

--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -23,7 +23,8 @@
 
         <app-route path="/dashboard/*" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel"></app-route>
 
-        <app-route path="/dashboard/*/*" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel"></app-route>
+        <app-route path="*" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel"></app-route>
+
       </app-router>
     </div>
 
