--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -35,7 +35,7 @@
 	<template>
 	    <paper-dialog id='createStrategyModalDialog' with-backdrop>
  			
-	    	<h2>Create a Strategy</h2>	 
+	    	<h2>[[header]]</h2>	 
  			<paper-input id='strategyNameInput' class='input-fields'
                          label="Strategy Name" 
                          value="{{strategyName}}"
@@ -49,7 +49,7 @@
  				
 			<paper-input id='TextInput' class='input-fields'
 		                     label="Give it a short description..." 
-		                     value="{{strategyDescription}}"
+		                     value="{{strategyDesc}}"
 		                     error-message="{{strategyDescErrorMessage}}"
 		                     type="text"
 		                     no-label-float
@@ -74,13 +74,15 @@
 			is: 'aq-editor-strategy-input-dialog',
 
 			properties: {
-				strategyDescErrorMessage: String,
+				header: String,
 				strategyName: String,
-				strategyDescription: String,
+				strategyDesc: String,
+				//dialogType:String, 
 			},
 
 			onSubmit() {
-
+				this.fire('create-action',{name:this.strategyName, description: this.strategyDesc});
+			
 			},
 
 			open() {
