--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -3,6 +3,11 @@
 <link rel="import" href="../layouts/aq-dashboard-main.html">
 <link rel="import" href="../components/user/aq-user-login-panel.html">
 
+<link rel="import" href='../components/aq-homepage.html'>
+<link rel="import" href='../components/aq-aboutpage.html'>
+<link rel="import" href='../components/aq-investmentpage.html'>
+
+
 <dom-module id="aq-dashboard">
   <template>
     <style>
@@ -16,14 +21,22 @@
     <div id="main">
       <app-router id="router" class="flex" mode="hash" trailingSlash="ignore">
       
-        <app-route path="/" redirect="/user"></app-route>
-        <app-route path="/user" element="aq-user-login-panel" bindrouter="" onurlchange="updateModel"></app-route>
+        <app-route path="/" redirect="/home"></app-route>
+        <app-route path="/user" element="aq-user-login-panel" bindrouter="" onurlchange=""></app-route>
+
+        <app-route path="/user/:displayMode" element="aq-user-login-panel" bindrouter="" onurlchange=""></app-route>
+
+        <app-route path="/home" element="aq-homepage" bindrouter=""></app-route>
+
+        <app-route path="/about" element="aq-aboutpage" bindrouter=""></app-route>
+
+        <app-route path="/investments" element="aq-investmentpage" bindrouter=""></app-route>
 
         <app-route path="/dashboard" redirect="/dashboard/home"></app-route>
 
-        <app-route path="/dashboard/*" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel"></app-route>
+        <app-route path="/dashboard/*" element="aq-dashboard-main" bindrouter="" onurlchange=""></app-route>
 
-        <app-route path="*" element="aq-dashboard-main" bindrouter="" onurlchange="updateModel"></app-route>
+        <app-route path="*" element="aq-dashboard-main" bindrouter="" onurlchange=""></app-route>
 
       </app-router>
     </div>
@@ -34,6 +47,7 @@
     Polymer({
 
       is: 'aq-dashboard',
+
 
     });
   </script>
