--- a/src/dialog/aq-delete-dialog.html
+++ b/src/dialog/aq-delete-dialog.html
@@ -1,12 +1,12 @@
 
-<link rel='import' href='../../../bower_components/iron-icon/iron-icon.html'>
-<link rel='import' href='../../../bower_components/iron-icons/iron-icons.html'>
-<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
-<link rel='import' href='../../../bower_components/paper-dialog/paper-dialog.html'>
-<link rel='import' href='../../../bower_components/paper-button/paper-button.html'>
+<link rel='import' href='../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../bower_components/paper-dialog/paper-dialog.html'>
+<link rel='import' href='../../bower_components/paper-button/paper-button.html'>
+
+<link rel='import' href='../icons/aq-iconset.html'>
 
 <dom-module id='aq-delete-dialog'>
-	
+	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
 	<style>
 		paper-dialog {
     		width: 400px;
@@ -78,11 +78,11 @@
 				accept: String,
 			},
 
-			onSubmit() {
+			onSubmit: function() {
 				this.fire('delete-action');
 			},
 
-			open() {
+			open: function() {
 				this.$.modal.open();
 			},
 
