--- a/src/dialog/aq-editor-strategy-compare-dialog.html
+++ b/src/dialog/aq-editor-strategy-compare-dialog.html
@@ -1,17 +1,14 @@
 
-<link rel='import' href='../../../bower_components/iron-icon/iron-icon.html'>
-<link rel='import' href='../../../bower_components/iron-icons/iron-icons.html'>
-<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
-<link rel='import' href='../../../bower_components/paper-dialog/paper-dialog.html'>
-<link rel='import' href='../../../bower_components/paper-button/paper-button.html'>
-<link rel='import' href='../../../bower_components/paper-input/paper-input.html'>
-<link rel='import' href='../../../bower_components/paper-input/paper-textarea.html'>
-<link rel='import' href='../../../bower_components/marked-element/marked-element.html'>
-<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../bower_components/paper-dialog/paper-dialog.html'>
+<link rel='import' href='../../bower_components/paper-button/paper-button.html'>
+<link rel='import' href='../../bower_components/paper-input/paper-input.html'>
+<link rel='import' href='../../bower_components/marked-element/marked-element.html'>
+<link rel='import' href='../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
+<link rel='import' href='../icons/aq-iconset.html'>
 
 <dom-module id='aq-editor-strategy-compare-dialog'>
-	<style is="custom-style" include="iron-flex iron-positioning"></style>
+	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
 	<style>
 		paper-dialog {
     		width: 1000px;
@@ -80,7 +77,7 @@
 
 	</template>
 	
-	<script src='../../../bower_components/jsdiff/diff.min.js'></script>
+	<!--script src='../../bower_components/jsdiff/diff.min.js'></script-->
 
 	<script>
 		Polymer ({
@@ -105,12 +102,12 @@
 				},
 			},
 
-			open() {
+			open: function() {
 				this.$.dialog.open();
 				this.findDiff();
 			},
 
-			findDiff() {
+			findDiff: function() {
 				diff = JsDiff.diffLines(this.code1, this.code2, 
 					{newlineIsToken: true});
 				
