--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -1,16 +1,13 @@
 
-<link rel='import' href='../../../bower_components/iron-icon/iron-icon.html'>
-<link rel='import' href='../../../bower_components/iron-icons/iron-icons.html'>
-<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
-<link rel='import' href='../../../bower_components/paper-dialog/paper-dialog.html'>
-<link rel='import' href='../../../bower_components/paper-button/paper-button.html'>
-<link rel='import' href='../../../bower_components/paper-input/paper-input.html'>
-<link rel='import' href='../../../bower_components/paper-input/paper-textarea.html'>
-<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../bower_components/paper-dialog/paper-dialog.html'>
+<link rel='import' href='../../bower_components/paper-button/paper-button.html'>
+<link rel='import' href='../../bower_components/paper-input/paper-input.html'>
+<link rel='import' href='../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
+<link rel='import' href='../icons/aq-iconset.html'>
 
 <dom-module id='aq-editor-strategy-input-dialog'>
-
+	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
 	<style>
 		paper-dialog {
     		width: 520px;
@@ -125,7 +122,7 @@
 				//dialogType:String, 
 			},
 
-			onSubmit() {
+			onSubmit: function() {
 				if(this.$.strategyNameInput.validate() && this.$.strategyDesc.validate()){
 					this.fire('create-action',{name:this.strategyName, description: this.strategyDesc});
 					this.$.createStrategyModalDialog.close();
@@ -133,7 +130,7 @@
 			
 			},
 
-			open() {
+			open: function() {
 				this.$.createStrategyModalDialog.open();
 			},
 
