--- a/src/dialog/aq-invitefriend-dialog.html
+++ b/src/dialog/aq-invitefriend-dialog.html
@@ -1,19 +1,15 @@
-
-<link rel='import' href='../../../bower_components/iron-icon/iron-icon.html'>
-<link rel='import' href='../../../bower_components/iron-icons/iron-icons.html'>
-<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
-<link rel='import' href='../../../bower_components/paper-dialog/paper-dialog.html'>
-<link rel='import' href='../../../bower_components/paper-button/paper-button.html'>
-<link rel='import' href='../../../bower_components/paper-input/paper-input.html'>
-<link rel='import' href='../../../bower_components/paper-input/paper-textarea.html'>
-<link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
+<link rel='import' href='../../bower_components/paper-dialog/paper-dialog.html'>
+<link rel='import' href='../../bower_components/paper-button/paper-button.html'>
+<link rel='import' href='../../bower_components/paper-input/paper-input.html'>
+<link rel='import' href='../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
 <link rel="import" href="../../bower_components/gold-email-input/gold-email-input.html">
 
-<link rel='import' href='../aq-markdown-editor.html'>
+<link rel='import' href='../icons/aq-iconset.html'>
 
 <dom-module id='aq-invitefriend-dialog'>
-
+  <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+  </style>
 	<style>
 		paper-dialog {
     		width: 40%;
@@ -94,7 +90,7 @@
 	    	
         <div class="layout horizontal">
           <div class="flex"></div>
-          <iron-icon icon="social:person-add"></iron-icon>
+          <iron-icon icon="aq-icons:person-add"></iron-icon>
         </div>
 
         <div id='header'>
@@ -137,18 +133,18 @@
         },		
 			},
 
-			onSubmit() {
+			onSubmit: function() {
 				if(this.$.userEmailInput.validate()) {
 					   this.fire('send-invite-action',{address:this.userEmail});
              this.$.sendInviteModalDialog.close();
 				  } 		
 			},
 
-			open() {
+			open: function() {
 				this.$.sendInviteModalDialog.open();
 			},
 
-      onCancel() {
+      onCancel: function() {
         this.emailAddress = "";
       },
 
