--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -17,6 +17,9 @@
 <link rel="import" href='../dialog/aq-invitefriend-dialog.html'>
 
 <dom-module id="aq-dashboard">
+    
+    <style include="iron-flex iron-flex-alignment"></style>
+
     <style>
       
       :host {
