--- a/src/dialog/aq-delete-dialog.html
+++ b/src/dialog/aq-delete-dialog.html
@@ -6,7 +6,7 @@
 <link rel='import' href='../icons/aq-iconset.html'>
 
 <dom-module id='aq-delete-dialog'>
-	<style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning"></style>
+	<style  include="iron-flex iron-flex-alignment iron-positioning"></style>
 	<style>
 		paper-dialog {
     		width: 400px;
