--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -7,7 +7,7 @@
 <link rel='import' href='../icons/aq-iconset.html'>
 
 <dom-module id='aq-editor-strategy-input-dialog'>
-	<style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+	<style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
 	<style>
 		paper-dialog {
     		width: 520px;
