--- a/src/dialog/aq-invitefriend-dialog.html
+++ b/src/dialog/aq-invitefriend-dialog.html
@@ -8,7 +8,7 @@
 <link rel='import' href='../icons/aq-iconset.html'>
 
 <dom-module id='aq-invitefriend-dialog'>
-  <style is="custom-style" include="iron-flex iron-flex-alignment iron-positioning">
+  <style  include="iron-flex iron-flex-alignment iron-positioning">
   </style>
 	<style>
 		paper-dialog {
