--- a/src/dialog/aq-sendfeedback-dialog.html
+++ b/src/dialog/aq-sendfeedback-dialog.html
@@ -9,7 +9,7 @@
 <link rel='import' href='../icons/aq-iconset.html'>
 
 <dom-module id='aq-sendfeedback-dialog'>
-  <style is="custom-style" include="iron-flex iron-flex-alignment  iron-positioning"></style>
+  <style  include="iron-flex iron-flex-alignment  iron-positioning"></style>
 	<style>
 		paper-dialog {
     		width: 80%;
