More Css changes. Added handling of analyze event in aq-analyze-main

--- a/src/dialog/aq-sendfeedback-dialog.html
+++ b/src/dialog/aq-sendfeedback-dialog.html
@@ -25,8 +25,8 @@
   		.input-fields {
 
   			  padding-bottom: 20px;
-  			--paper-input-container-color:#333a56;
-  			--paper-input-container-input-color:#333a56;
+  			--paper-input-container-color:#24293d;
+  			--paper-input-container-input-color:#24293d;
   			--paper-input-container-underline:{
   				color:teal
   			};
