--- a/src/dialog/aq-invitefriend-dialog.html
+++ b/src/dialog/aq-invitefriend-dialog.html
@@ -13,6 +13,7 @@
 	<style>
 		paper-dialog {
     		width: 40%;
+        min-width: 400px;
     		--height: 250px;
     		margin-right:0px;
     		margin-left:0px;
@@ -25,8 +26,8 @@
   		.input-fields {
 
   			  padding-bottom: 20px;
-  			--paper-input-container-color:#333a56;
-  			--paper-input-container-input-color:#333a56;
+  			--paper-input-container-color:#24293d;
+  			--paper-input-container-input-color:#24293d;
   			--paper-input-container-underline:{
   				color:teal
   			};
