--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -17,7 +17,7 @@
     		padding-right: 0px;
     		padding-left:0px;
     		border-radius: 5px;
-    		border: 2px solid teal;
+    		border: 2px solid #cf6766;--teal;
   		}
 
   		.input-fields {
@@ -59,7 +59,7 @@
      iron-icon {
         height:50px;
         width: 50px;
-        color: teal;
+        color: #cf6766;--teal;
         margin-bottom: -35px;
         margin-top:-15px;
       }
