--- a/src/dialog/aq-sendfeedback-dialog.html
+++ b/src/dialog/aq-sendfeedback-dialog.html
@@ -19,7 +19,7 @@
     		padding-right: 0px;
     		padding-left:0px;
     		border-radius: 5px;
-    		border: 2px solid teal;
+    		border: 2px solid #cf6766;--teal;
   		}
 
   		.input-fields {
@@ -77,7 +77,7 @@
       iron-icon {
         height:50px;
         width: 50px;
-        color: teal;
+        color: #cf6766;--teal;
         margin-bottom: -35px;
         margin-top:-15px;
       }
@@ -145,8 +145,8 @@
 			onSubmit: function() {
 				if(this.$.feedbackSubjectInput.validate()) {
           if(this.$.mkdEditor.getContent()!=""){
-					   this.fire('send-feedback-action',{subject:this.$.feedbackSubjectInput.value, feedback: this.$.mkdEditor.getContent()});
-					   this.error = false;
+         	   this.fire('send-feedback-action',{subject:this.$.feedbackSubjectInput.value, feedback: this.$.mkdEditor.getContent()});
+         	   this.error = false;
              this.$.sendFeedbackModalDialog.close();
 
 				  } else {
