Modified CSS. Code cleanup and minor changes

--- a/src/dialog/aq-community-attachbacktest-dialog.html
+++ b/src/dialog/aq-community-attachbacktest-dialog.html
@@ -20,7 +20,7 @@
         }
 
         paper-icon-button {
-            color: #c3403f;
+            color: #cc6666;
         }
 
         paper-icon-button:active {
@@ -41,13 +41,13 @@
             font-style: italic;
             font-size:19px;
             --font-weight: bold;
-            color:#c3403f;
+            color:#cc6666;
         }
 
         paper-dialog{
             height: 100%;
             width:850px;
-            border: 2px solid #c3403f;
+            border: 2px solid #cc6666;
         }
 
         paper-drawer-panel {
