--- a/src/dialog/aq-delete-dialog.html
+++ b/src/dialog/aq-delete-dialog.html
@@ -16,7 +16,7 @@
     		padding-right: 0px;
     		padding-left:0px;
     		border-radius: 5px;
-    		border: 2px solid #cf6766;--teal;
+    		border: 2px solid #cc6666;;--teal;
   		}
 
   		#buttons {
@@ -43,7 +43,7 @@
 		  iron-icon {
 	        height:50px;
 	        width: 50px;
-	        color: #cf6766;--teal;
+	        color: #cc6666;;--teal;
 	        margin-bottom: -35px;
 	        margin-top:-15px;
 	      }
