--- a/src/dialog/aq-sendfeedback-dialog.html
+++ b/src/dialog/aq-sendfeedback-dialog.html
@@ -19,7 +19,7 @@
     		padding-right: 0px;
     		padding-left:0px;
     		border-radius: 5px;
-    		border: 2px solid #cf6766;--teal;
+    		border: 2px solid #cc6666;;--teal;
   		}
 
   		.input-fields {
@@ -77,7 +77,7 @@
       iron-icon {
         height:50px;
         width: 50px;
-        color: #cf6766;--teal;
+        color: #cc6666;;--teal;
         margin-bottom: -35px;
         margin-top:-15px;
       }
