Fixes for firefox.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="manifest" href="/manifest.json">
-    <script src="/bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+    <script src="/bower_components/webcomponentsjs/webcomponents.min.js"></script>
     <link rel="stylesheet" href="resources/scripts/highlight/styles/default.css">
     <script src="resources/scripts/highlight/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
@@ -19,7 +19,7 @@
         font-family: 'Open Sans', sans-serif;
       }
     </style>
-    <link rel="shortcut icon" type="image/png" href="reources/images/favicon.png">
+    <link rel="shortcut icon" type="image/png" href="/reources/images/favicon.png">
   </head>
 
   <body class="fullbleed layout vertical">
