--- a/src/dialog/aq-delete-dialog.html
+++ b/src/dialog/aq-delete-dialog.html
@@ -54,7 +54,7 @@
 	    <paper-dialog id='modal' with-backdrop>
 	    	<div class="layout horizontal">
           		<div class="flex"></div>
-          		<iron-icon icon="icons:delete"></iron-icon>
+          		<iron-icon icon="aq-icons:delete"></iron-icon>
         	</div>
 
  			<h2>[[heading]]</h2>
