--- a/src/dialog/aq-editor-strategy-compare-dialog.html
+++ b/src/dialog/aq-editor-strategy-compare-dialog.html
@@ -60,7 +60,7 @@
 	<template>
 	    <paper-dialog id='dialog' with-backdrop>
 	    	<div style="margin-left:-30px;margin-top:-5px">
- 				<paper-icon-button dialog-dismiss icon="icons:cancel"></paper-icon-button>
+ 				<paper-icon-button dialog-dismiss icon="aq-icons:cancel"></paper-icon-button>
  			</div>
  			
  			 <h4> Code Diff</h4>	
