--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -71,7 +71,7 @@
 	    <paper-dialog id='createStrategyModalDialog' with-backdrop>
 	    	<div class="layout horizontal">
           		<div class="flex"></div>
-          		<iron-icon icon="icons:add"></iron-icon>
+          		<iron-icon icon="aq-icons:add"></iron-icon>
         	</div>
 
 	    	<h2>[[header]]</h2>
