--- a/src/dialog/aq-community-attachbacktest-dialog.html
+++ b/src/dialog/aq-community-attachbacktest-dialog.html
@@ -1,4 +1,8 @@
 <link rel="import" href="../../bower_components/paper-dialog/paper-dialog.html">
+<link rel="import" href="../../bower_components/paper-header-panel/paper-header-panel.html">
+<link rel="import" href="../../bower_components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../../bower_components/paper-item/paper-item.html">
+<link rel="import" href="../../bower_components/paper-listbox/paper-listbox.html">
 
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
@@ -180,6 +184,8 @@
           },
 
           APIEndPoint: String,
+
+          header:Object,
 
         },
 
