Fixed gulp build file to solve double registration. Minor element changes

--- a/resources/aq-environment.html
+++ b/resources/aq-environment.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../bower_components/iron-meta/iron-meta.html">
+<!--link rel="import" href="../bower_components/iron-meta/iron-meta.html"-->
 
 <iron-meta key="APIEndPoint" value="http://localhost:3002/api/v2"></iron-meta>
 
