--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -128,12 +128,12 @@
 					this.$.createStrategyModalDialog.close();
 				}
 
-        this.fire('rt-changed',{route:'/dashboard/editor'});
+        //this.fire('rt-changed',{route:'/dashboard/editor'});
 			},
 
       onCancel: function() {
         this.$.createStrategyModalDialog.close();
-        this.fire('rt-changed',{route:'/dashboard/editor'});
+        //this.fire('rt-changed',{route:'/dashboard/editor'});
       },  
 
 			open: function() {
