Code Cleanup. Redirect to signin if user attempts any page without login.

--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -24,10 +24,8 @@
   			--padding-bottom: 20px;
   			--paper-input-container-color:#24293d;
   			--paper-input-container-input-color:#24293d;
-  			--paper-input-container-underline:{
-  				color:teal
-  			};
-  		}
+        --paper-input-container-focus-color :teal;
+   		}
 
   		#buttons {
   			margin-bottom:0px;
