--- a/src/dialog/aq-invitefriend-dialog.html
+++ b/src/dialog/aq-invitefriend-dialog.html
@@ -24,13 +24,10 @@
   		}
 
   		.input-fields {
-
   			  padding-bottom: 20px;
   			--paper-input-container-color:#24293d;
   			--paper-input-container-input-color:#24293d;
-  			--paper-input-container-underline:{
-  				color:teal
-  			};
+  			--paper-input-container-focus-color :teal;
   		}
 
   		#buttons {
