More bug fixes for firefox.  Following is the list of bugs. 1. Search wasn't working; 2.Attach backtest Dialog wasn't working consecutively; 3. Previous replies were added in new posts

--- a/src/dialog/aq-community-attachbacktest-dialog.html
+++ b/src/dialog/aq-community-attachbacktest-dialog.html
@@ -241,10 +241,11 @@
         },
 
         onCancel: function() {
+            console.log("Resetting bt dialog");
             this.strategyId = "";
             this.strategies = [];
             this.backtests = [];
-            this.checkedId="";
+            this.checkedId = {};
             this.checkedCount = 0;
         },
 
@@ -259,6 +260,7 @@
 
         onAttach: function() {
             var key = "";
+            console.log(this.checkedId);
             for (key in this.checkedId) {
                 if(this.checkedId[key]) {
                     break;
