Create a strategy from sidebar consecutive use was broken. Fixed!

--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -136,7 +136,7 @@
       onCancel: function() {
         this.reset();
         this.$.createStrategyModalDialog.close();
-        //this.fire('rt-changed',{route:'/dashboard/editor'});
+        this.fire('rt-changed',{route:'/dashboard/editor'});
       },  
 
 			open: function(type) {
