Minor bug fixes!

--- a/src/dialog/aq-editor-strategy-input-dialog.html
+++ b/src/dialog/aq-editor-strategy-input-dialog.html
@@ -141,7 +141,7 @@
 
 			open: function(type) {
 				this.$.createStrategyModalDialog.open();
-
+        this.$.strategyNameInput.focus();
 			},
 
       computeIconType: function(header) {
