--- a/src/aq-dashboard/aq-dashboard.html
+++ b/src/aq-dashboard/aq-dashboard.html
@@ -451,12 +451,12 @@
             var bulksent = this.backtests[backtestId].bulksent;
             var subscription = this.backtests[backtestId].subscription;
             var alldata = this.backtests[backtestId].data;    
-                     
+                 
             if(subscription && !bulksent) {
               this.fire('iron-signal',{name:'bulk-data', data:alldata});
               this.backtests[backtestId].bulksent = true;
             } else if (subscription){
-              this.fire('iron-signal',{name:'point-data', data:e.detail});
+                this.fire('iron-signal',{name:'point-data', data:e.detail});
             }
         },
 
@@ -490,6 +490,7 @@
           var backtestId = e.detail.backtestId;
           if(this.backtests[backtestId]) { 
             this.backtests[backtestId].subscription = true;
+            this.backtests[backtestId].bulksent = false;
             this.async(this.managesubscriptions, 60000);
           }
         },
@@ -570,13 +571,7 @@
         },
 
         _urlChanged: function(e) {
-          console.log("SHivaaaaa");
           this.changeTabOnURL();
-        },
-
-        _hashChanged: function(e) {
-          console.log(e.detail);
-          console.log("My name is shiv");
         },
 
         changeTabOnURL: function() {
