--- a/resources/aq-environment.html
+++ b/resources/aq-environment.html
@@ -1,5 +1,5 @@
 <!--link rel="import" href="../bower_components/iron-meta/iron-meta.html"-->
 
-<iron-meta key="APIEndPoint" value="http://service-staging.aimsquant.com/api/v2"></iron-meta>
+<iron-meta key="APIEndPoint" value="http://stagingapi.aimsquant.com/api/v2"></iron-meta>
 
-<iron-meta key="WSEndPoint" value="ws://service-staging.aimsquant.com"></iron-meta>
+<iron-meta key="WSEndPoint" value="ws://stagingapi.aimsquant.com"></iron-meta>
