--- a/src/dialog/aq-sendfeedback-dialog.html
+++ b/src/dialog/aq-sendfeedback-dialog.html
@@ -22,6 +22,17 @@
     		border: 2px solid #cc6666;;--teal;
   		}
 
+      #sentMessageDialog {
+        --width: 40%;
+        width: 500px;
+        margin-right:0px;
+        margin-left:0px;
+        padding-right: 0px;
+        padding-left:0px;
+        border-radius: 5px;
+        border: 2px solid #cc6666;;--teal;
+      } 
+
   		.input-fields {
   			  padding-bottom: 20px;
   			--paper-input-container-color: #24293d;
@@ -120,6 +131,15 @@
 		 	
 		</paper-dialog>
 
+     <paper-dialog id='sentMessageDialog' modal>
+      <div><p style="font-weight: normal; font-size: 16px;">Thanks for your feedback. We will get back to you shortly.</p></div>
+      <div id='buttons' class="layout vertical">    
+        <div class="layout horizontal self-end">
+          <paper-button noink dialog-dismiss>Close</paper-button> 
+        </div>
+      </div>
+    </paper-dialog>
+
 	</template>
 	
 	<script>
@@ -145,6 +165,7 @@
          	   this.fire('send-feedback-action',{subject:this.$.feedbackSubjectInput.value, feedback: this.$.mkdEditor.getContent()});
          	   this.error = false;
              this.$.sendFeedbackModalDialog.close();
+             this.$.sentMessageDialog.open();
 
 				  } else {
             this.error = true;
